--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech blog</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -14,6 +14,10 @@
       <h1>
         <a href="/">Tech Blog</a>
       </h1>
+      <nav>
+        <button id="logout" class="btn-no-style">logout</button>
+        <a href="/login">login</a>
+      </nav>
     </header>
     <main>
       {{{ body }}}
@@ -22,7 +26,7 @@
       Thanks for visiting!
     </footer>
   </div>
-
+ <script src="/javascript/logout.js"></script>
 </body>
 
 </html>
