--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,8 +6,8 @@
     height: 100%;
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
-    color: 	#a0bad1
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: 	#0b7cdf
   }
   
   a {
@@ -18,7 +18,7 @@
   }
   
   a:hover {
-    color: #022550;
+    color: #4880c6;
   }
   
   button {
@@ -33,7 +33,7 @@
   }
   
   button:hover {
-    background-color: #3486eb;
+    background-color: #020c17;
   }
   
   .post-list {
@@ -110,7 +110,7 @@
   }
   
   .delete-post-btn {
-    background-color: #d22934;
+    background-color: #790f0f;
   }
   
   .delete-post-btn:hover {
@@ -134,7 +134,7 @@
   }
   
   .upvote-btn {
-    background-color: #197d0f;
+    background-color: #b9b31a;
     transition: background-color .1s;
   }
   
